# lamb

./: .dockerignore  .gitignore  .ignore  AUTHORS  Dockerfile  LICENSE  README.md  flake.nix  main.py  pyproject.toml  pytype.cfg  result  result.json  run_tests.py  user-study.ipynb
ebnf/: LayoutEBNFVisitorImpl.py
ebnf/antlr/: LayoutEBNF.g4
ebnf/ast/: loader.py
ebnf/transformer/: Ambiguous.py  DesugarTransformer.py  EquivalentVarTransformer.py  ExpansionTransformer.py  Nullable.py  ReduceTransformer.py  __init__.py
interaction/: __init__.py  cmd_args.py  metric_printer.py  nested.py  parse_tree.py  refine.py
interaction/synthesis/: __init__.py
lamb/: __init__.py  __main__.py
lamb/ebnf/: LayoutEBNFVisitorImpl.py
lamb/interaction/: __init__.py  cmd_args.py  metric_printer.py  parse_tree.py  refine.py
lamb/utils/: DebugOutput.py  DisjointSet.py  RuleDictBuilder.py  SymbolIdMapper.py  TimedExecution.py
lamb/verification/: __init__.py  predicate.py
tests/: motivating-example.bnf
tests/running-example/: running-example.bnf
tests/sass/: create-next-round.py  sass.bnf
tests/yaml/: original.bnf
user-study/: questionnaire.csv  readme.txt
user-study/haskell-do/: example.md  haskell-do-raw.bnf  haskell-do.bnf
user-study/let-stmt/: example.md  let-stmt-raw.bnf  let-stmt.bnf
user-study/match-case/: example.md  match-case-raw.bnf  match-case.bnf
user-study/python-for/: example.md  python-for-raw.bnf  python-for.bnf
user-study/python-if/: python-if.bnf
user-study/python-patmatch/: example.md  python-patmatch-raw.bnf  python-patmatch.bnf
utils/: DebugOutput.py  RuleDictBuilder.py  SymbolIdMapper.py  TempFile.py  TimedExecution.py
verification/: __init__.py  predicate.py
(+156 files in other folders)
