[tool.poetry]
name = "lamb"
version = "0.1.0"
description = "artifact for the paper lamb"
authors = ["paulzfm", "panda2134"]
packages = [{include = "lamb"}]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"
antlr4-python3-runtime = "4.10"
nanoid = "2.0.*"
open-python = ">=1.1.1"
prettytable = "3.3.*"
prompt-toolkit = "3.0.*"
pydash = "5.1.*"
pydot = "1.4.*"
pymongo = "4.1.*"
pysmt = "0.9.5"
pyyaml = "6.*"
rich = "12.4.*"
six = "1.*.*"
tqdm = "4.64.*"
yices = "1.1.5"
# z3 = "4.8.*" # taken from nixpkgs, thus not in poetry.lock

[tool.poetry.dev-dependencies]
natsort = "8.1.*"
jedi-language-server = "0.36.*"

[tool.poetry.scripts]
lamb = 'lamb:entrypoint'
